# cryptography_rust

./: README.md
ECC/: Cargo.toml  readme.md
ECC/src/: main.rs
ElGamal/: Cargo.toml  readme.md
ElGamal/src/: main.rs
aes/: Cargo.toml  README.md  main.rs
aes/src/: main.rs
chacha20/: Cargo.toml  README.md  main.rs
hash/: Cargo.toml  Readme.md
hash/src/: main.rs
rsa/: Cargo.toml  README.md
rsa/src/: main.rs
salsa20/: Cargo.toml  README.md
salsa20/src/: main.rs
tss/: Cargo.toml  readme.md
tss/src/: main.rs
zk-snark/: Cargo.toml  readme.md
zk-snark/src/: main.rs
